--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,18 @@
             <version>7.1.15</version>
             <type>pom</type>
         </dependency>
+
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.11.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.6.1</version>
+        </dependency>
+
     </dependencies>
 </project>
